download config server update
